fix adaptive on mobile

--- a/src/style/coursePage/courseMedia.scss
+++ b/src/style/coursePage/courseMedia.scss
@@ -141,7 +141,7 @@
     height: auto;
   }
   .layout .content:has(.preview) {
-    height: 100%;
+    height: auto;
   }
   .layout .content .video .preview {
     display: flex;
